--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
               run: npm run check
 
     deploy:
+        needs: test
         runs-on: ubuntu-latest
-
         steps:
             - name: Print Hello world
               run: echo "hello World"
